--- a/ecoplaycaicara/pubspec.yaml
+++ b/ecoplaycaicara/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   form_field_validator: 1.1.0
   image_picker: 1.0.7
   page_flip: 0.2.5+1
+  image: 4.1.3
 
 dependency_overrides:
   flame: 1.18.0
